--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Clock</title>
-    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="style.css" rel="stylesheet">
+    <script defer src="script.js"></script>
+    <title>Clock</title>
 </head>
 
 <body>
     <div class="clock">
         <div class="hand hour" data-hour-hand></div>
-        <div class="hand minute" data-minitue-hand></div>
+        <div class="hand minute" data-minute-hand></div>
         <div class="hand second" data-second-hand></div>
         <div class="number number1">1</div>
         <div class="number number2">2</div>
@@ -26,8 +28,6 @@
         <div class="number number11">11</div>
         <div class="number number12">12</div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 
 </html>
