--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="style.css" rel="stylesheet">
     <script defer src="script.js"></script>
-    <title>Clock</title>
+    <title>JSClock</title>
 </head>
 
 <body>
